tests/modules/good/lib/testmod.hel
// @skip not a test; module used by local_module.hel

module testmod;

add = (a: i32, b: i32): i32 { a + b };
